lang/lc/tests/err_reinst.sys
system bar()
{
}

system foo()
{
	system bar S1();

	S1();

	system bar S2[2];

	S2();
	S2[1]();
}
